--- a/src/main/resources/hudson/plugins/extracolumns/LastBuiltOnColumn/columnHeader.properties
+++ b/src/main/resources/hudson/plugins/extracolumns/LastBuiltOnColumn/columnHeader.properties
@@ -1,6 +1,7 @@
+#
 # The MIT License
-# 
-# Copyright (c) 2011, Frederic Gurr, Axel Haustant
+#
+# Copyright (c) 2014, Lukasz Jader
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -19,11 +20,6 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
+#
 
-ConfigureProjectColumn.DisplayName=Configure Project
-DescriptionColumn.DisplayName=Project Description
-BuildDescriptionColumn.DisplayName=Build Description
-DisableProjectColumn.DisplayName=Disable/Enable Project
-TestResultColumn.DisplayName=Test Result
-SCMTypeColumn.DisplayName=SCM Type
-LastBuiltOnColumn.DisplayName=Last Built On
+LastBuiltOnColumn.Header=Last built on
